--- a/Index.css
+++ b/Index.css
@@ -49,7 +49,7 @@ p {
     align-items: center;
 }
 .top .menu-btn:hover {
-   background: linear-gradient(-45deg, #ff0000, #ff7300,) ;
+   background: linear-gradient(90deg,#0f0,#fffb00,green,#ff0000,); 
   color: #fff;
 }
 .top .menu-btn {
@@ -58,14 +58,14 @@ p {
    top: 3px;
     outline: none;
     border: none;
-     background: linear-gradient(45deg, #ff0000, #ff7300) ;
+    background: linear-gradient(0deg,#0f0,#fffb00,green,#ff0000,);
     height: 60px;
     width: 60px;
     font-size: 35px;
     padding: 2px 2px;
     border: 1px solid red;
     border-radius: 3px;
-    color: #0f0;
+    color: #fff;
     cursor: pointer;
 }
 
