--- a/Index.css
+++ b/Index.css
@@ -49,7 +49,7 @@ p {
     align-items: center;
 }
 .top .menu-btn:hover {
-   background: linear-gradient(90deg,#0f0,#fffb00,green,#ff0000,); 
+   background: linear-gradient(90deg, #0f0, #fffb00, green, #ff0000, indigo); 
   color: #fff;
 }
 .top .menu-btn {
@@ -58,7 +58,7 @@ p {
    top: 3px;
     outline: none;
     border: none;
-    background: linear-gradient(0deg,#0f0,#fffb00,green,#ff0000,);
+    background: linear-gradient(0deg, #0f0, #fffb00, green, #ff0000, indigo);
     height: 60px;
     width: 60px;
     font-size: 35px;
