--- a/Index.css
+++ b/Index.css
@@ -18,7 +18,7 @@ iframe {
   top: 65px;
 }
 p {
-  background-image: url(logo-i.jpg) ;
+  background-image: url(page-logo.jpg) ;
   background-size:cover;
   position: fixed;
   width: 100%;
