--- a/Verify-user-id.css
+++ b/Verify-user-id.css
@@ -14,7 +14,7 @@ select {
     width: 300px;
     padding: 30px;
     margin: 10% auto;
-    color: #0f0;
+    color: #fff;
     background: linear-gradient(90deg, blue, indigo, #90f, indigo, green);
     border-radius: 8px;
 }
@@ -64,7 +64,7 @@ p {
     width: px;
     height: cm;
     font-size: 0.7cm;
-    font-weight: 700;
+    font-weight: 1000;
     outline: none;
     background: #fff;
     color: blue;
@@ -72,8 +72,11 @@ p {
     border: 2px solid #0f0;
     border-radius: 11px;
     padding: 5px 10px;
+    box-shadow: 4px 4px 6px green;
+    text-shadow: 3px 3px 5px green;
 }
 .Verify-id button:hover {
-  background: green;
+  background: indigo;
   color: red;
+  border: 2px solid red;
 }
